♻️ refactor(core): ActivityWindow 가변인자 생성자를 List.of 위임으로 정리
JEP 513 유연한 생성자 본문 대신 this(...) 인자식 안에서
Objects.requireNonNull으로 감싸 검증하도록 바꾼다.

Arrays.asList는 배열을 감싸기만 해서 compact constructor의
List.copyOf가 다시 복사했지만, List.of는 이미 불변 리스트라
List.copyOf가 같은 인스턴스를 그대로 반환한다. 복사가 한 번으로
줄고 Java 25 전용 문법 의존도 사라진다.

null 배열/null 원소의 예외 타입과 메시지는 이전과 동일하다.